--- a/lesson2_units_formats_envir/blog/app/static/css/main.css
+++ b/lesson2_units_formats_envir/blog/app/static/css/main.css
@@ -13,11 +13,11 @@ I've left some boilerplate below for you.
 */
 
 body {
-	/*background: blue;*/
+/* 	background: blue; */
 }
 
 article {
-
+	width: 50em;
 }
 
 h1 {
@@ -25,5 +25,6 @@ h1 {
 }
 
 img {
+	max-width: 100%;
 
 }
