--- a/lesson3_images_w_markup/blog1/blog/templates/index.html
+++ b/lesson3_images_w_markup/blog1/blog/templates/index.html
@@ -13,7 +13,7 @@
 
   <title>My responsive blog: picture story</title>
 
-  <link rel="stylesheet" href="./static/css/main.css" />
+  <link rel="stylesheet" href="./static/styles.css" />
 
 </head>
 
