--- a/lesson3_images_w_markup/blog1/blog/templates/index.html
+++ b/lesson3_images_w_markup/blog1/blog/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <meta charset="utf-8">
   <meta name="description" content="Udacity Responsive Images course project" />
   <meta name="author" content="//samdutton.com">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
@@ -12,7 +12,7 @@
   <base target="_blank">
 
   <title>My responsive blog: picture story</title>
-
+  <link rel="shortcut icon" href="./static/blogicon.ico" />
   <link rel="stylesheet" href="./static/styles.css" />
 
 </head>
@@ -29,7 +29,7 @@
 
     <h2>My story</h2>
     
-    <p>I love cheese, especially manchego swiss. <img src="./static/images_src/fixed/smiley_face.png"> Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
+    <p>I love cheese, especially manchego swiss. <span>&#9786;</span>Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
     <figure>
     <img src="./static/images_build/horses-800.jpg">
     <figcaption>Horses and things</figcaption>
@@ -71,14 +71,12 @@
   
   </article>
 
-  <img style="max-width: 100%" src="./static/images_src/fixed/flourish.png">
-  <!--
-  Flourish credit: http://pixabay.com/en/flourish-line-border-decoration-31609/
-  -->
-
+  <footer>
+ 
+  </footer>
   <br>
   <a href="//github.com/udacity/responsive-images/tree/master/project/start" title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
-
+  
   <script src="http://udacity.github.io/responsive-images/project/project-grader.js"></script>
   <script async src="http://udacity.github.io/frontend-grading-engine/ud-grading-engine-v0.1.js"></script>
 
