--- a/lesson3_images_w_markup/blog1/blog/templates/index.html
+++ b/lesson3_images_w_markup/blog1/blog/templates/index.html
@@ -72,6 +72,14 @@
   </article>
 
   <footer>
+    <hr class="divide"></hr>
+    <br>
+    <ul>
+    <li class="zocial-twitter">Twitter</li>
+    <li class="zocial-digg">Digg</li>
+    <li class="zocial-facebook">Facebook</li>
+    <li class="zocial-google">Google+</li>
+  </ul>
  
   </footer>
   <br>
