add picture elements with source webp and jpg fallbacks

--- a/lesson4_full_responsiveness/full_responsive_blog/blog/templates/index.html
+++ b/lesson4_full_responsiveness/full_responsive_blog/blog/templates/index.html
@@ -35,13 +35,13 @@
   <h1>My responsive blog</h1>
 
   <article>
-    
+  
     <!-- still life -->
     <picture>
       <source media="(min-width: 800px)" srcset="./static/images/still_life-1600_large.webp 1x, ./static/images/still_life-1600_HD_large.webp 2x">
       <source media="(min-width: 500px)" srcset="./static/images/still_life-800_medium.webp 1x, ./static/images/still_life-800_HD_medium.webp 2x">
       <source media="(min-width: 200px)" srcset="./static/images/still_life-400_small.webp 1x, ./static/images/still_life-400_HD_small.webp 2x">
-      <img src="./static/images/still_life-1600_large.jpg" srcset="./static/images/still_life-400_small.jpg 400w, ./static/images/still_life-800_medium.jpg 800w, ./static/images/still_life-1600_large.jpg 800w" alt="a still life photo of a desk and fruit">
+      <img src="./static/images/still_life-1600_large.jpg" srcset="./static/images/still_life-400_small.jpg 400w, ./static/images/still_life-800_medium.jpg 800w, ./static/images/still_life-1600_large.jpg 1600w" alt="a still life photo of a desk and some fruit">
     </picture>
 
     <h2>My story</h2>
@@ -49,7 +49,12 @@
     <p>I love cheese, especially manchego swiss. ☺ Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
 
     <figure>
-      <img src="./static/images/horses-1600_large_2x.jpg" alt="">
+      <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/horses-1600_large.webp 1x, ./static/images/horses-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/horses_crop-800_medium.webp 1x, ./static/images/horses_crop_800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/horses_crop_s-400_small.webp 1x, ./static/images/horses_crop_s-400_HD_small.webp 2x">
+        <img src="./static/images/horses-1600_large.jpg" srcset="./static/images/horses_crop_s-400_small.jpg 400w, ./static/images/horses_crop_s-800_medium.jpg 800w, ./static/images/horses-1600_large.jpg 1600w" alt="eight horses grazing in a field">
+      </picture>
       <figcaption>Horses in Hawaii</figcaption>
     </figure>
 
@@ -58,7 +63,12 @@
     <p>Manchego cheese strings hard cheese. Say cheese swiss cheese strings squirty cheese mozzarella feta the big cheese halloumi. Cheddar cheese and biscuits cut the cheese queso hard cheese red leicester parmesan st. agur blue cheese. Smelly cheese caerphilly hard cheese cream cheese cream cheese the big cheese feta squirty cheese. Babybel fromage edam lancashire.</p>
 
     <figure>
-      <img src="./static/images/volt-1600_large_2x.jpg" alt="">
+       <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/volt-1600_large.webp 1x, ./static/images/volt-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/volt-800_medium.webp 1x, ./static/images/volt-800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/volt-400_small.webp 1x, ./static/images/volt-400_HD_small.webp 2x">
+        <img src="./static/images/volt-1600_large.jpg" srcset="./static/images/volt-400_small.jpg 400w, ./static/images/volt-800_medium.jpg 800w, ./static/images/volt-1600_large.jpg 1600w" alt="an old sign that says Volt">
+      </picture>
       <figcaption>Sign in an old Berlin power station</figcaption>
     </figure>
 
@@ -66,7 +76,12 @@
     <p>Edam parmesan smelly cheese. Dolcelatte say cheese cheesy feet lancashire cow boursin stinking bishop brie. Stilton cheese strings say cheese pecorino cheeseburger fromage frais cauliflower cheese manchego. St. agur blue cheese ricotta stinking bishop queso camembert de normandie manchego cheese triangles fondue. Gouda.</p>
 
     <figure>
-      <img src="./static/images/cockatoos-1600_large_2x.jpg" alt="">
+       <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/cockatoos-1600_large.webp 1x, ./static/images/cockatoos-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/cockatoos-800_medium.webp 1x, ./static/images/cockatoos-800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/cockatoos-400_small.webp 1x, ./static/images/cockatoos-400_HD_small.webp 2x">
+        <img src="./static/images/cockatoos-1600_large.jpg" srcset="./static/images/cockatoos-400_small.jpg 400w, ./static/images/cockatoos-800_medium.jpg 800w, ./static/images/postcard-1600_large.jpg 1600w" alt="two cockatoos chillin on a back porch railing with a mountainous backdrop">
+      </picture>
       <figcaption>Cockatoos</figcaption>
     </figure>
 
@@ -79,7 +94,12 @@
     <p>St. agur blue cheese cheese and wine say cheese. Goat cottage cheese brie cheese triangles say cheese when the cheese comes out everybody's happy stinking bishop dolcelatte. Parmesan say cheese cream cheese goat cauliflower cheese st. agur blue cheese cheese slices hard cheese. Cheese triangles.</p>
 
     <figure>
-      <img src="./static/images/postcard-1600_large_2x.jpg" alt="">
+      <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/postcard-1600_large.webp 1x, ./static/images/postcard-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/postcard-800_medium.webp 1x, ./static/images/postcard-800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/postcard-400_small.webp 1x, ./static/images/postcard-400_HD_small.webp 2x">
+        <img src="./static/images/postcard-1600_large.jpg" srcset="./static/images/postcard-400_small.jpg 400w, ./static/images/postcard-800_medium.jpg 800w, ./static/images/postcard-1600_large.jpg 1600w" alt="French postcard from 25 November 1914">
+      </picture>
       <figcaption>French postcard from 25 November 1914</figcaption>
     </figure>
 
@@ -87,7 +107,12 @@
     <p>Pecorino pepper jack cheesy feet. Smelly cheese cauliflower cheese fromage halloumi cream cheese who moved my cheese fromage fondue. Feta danish fontina cheesy grin mozzarella fromage cheesy grin airedale paneer. Cheddar halloumi cheese and biscuits jarlsberg cheese and biscuits cheese and biscuits squirty cheese.</p>
 
     <figure>
-      <img src="./static/images/grasshopper-1600_large_2x.jpg" alt="">
+       <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/grasshopper-1600_large.webp 1x, ./static/images/grasshopper-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/grasshopper-800_medium.webp 1x, ./static/images/grasshopper-800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/grasshopper-400_small.webp 1x, ./static/images/grasshopper-400_HD_small.webp 2x">
+        <img src="./static/images/grasshopper-1600_large.jpg" srcset="./static/images/grasshopper-400_small.jpg 400w, ./static/images/grasshopper-800_medium.jpg 800w, ./static/images/grasshopper-1600_large.jpg 1600w" alt="A grasshopper on a man's brimmed hat">
+      </picture>
       <figcaption>Grasshopper on an Akubra hat</figcaption>
     </figure>
 
@@ -95,14 +120,25 @@
     <p>Babybel cream cheese cheese on toast. Brie fromage swiss cheese and biscuits hard cheese babybel bocconcini brie. Cheesy grin swiss cheese strings paneer lancashire cauliflower cheese cheese on toast caerphilly. Queso queso cheese and wine taleggio mascarpone cheeseburger.</p>
 
     <figure>
-      <img src="./static/images/sfo-1600_large_2x.jpg" alt="">
+       <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/sfo-1600_large.webp 1x, ./static/images/sfo-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/sfo-800_medium.webp 1x, ./static/images/sfo-800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/sfo-400_small.webp 1x, ./static/images/sfo-400_HD_small.webp 2x">
+        <img src="./static/images/sfo-1600_large.jpg" srcset="./static/images/sfo-400_small.jpg 400w, ./static/images/sfo-800_medium.jpg 800w, ./static/images/sfo-1600_large.jpg 1600w" alt="An arial photo shot of San Francisco Airport from a plane">
+      </picture>
       <figcaption>Near SFO</figcaption>
     </figure>
 
     <p>Say cheese swiss cheesy grin. Cheese on toast queso bocconcini cheeseburger fondue manchego smelly cheese port-salut. Cream cheese cheese and wine airedale cheeseburger chalk and cheese cauliflower cheese fondue smelly cheese. Queso manchego.</p>
 
     <figure>
-      <img src="./static/images/rosella-1600_large_2x.jpg" alt="">
+       <picture>
+        <source media="(min-width: 800px)" srcset="./static/images/rosella-1600_large.webp 1x, ./static/images/rosella-1600_HD_large.webp 2x">
+        <source media="(min-width: 500px)" srcset="./static/images/rosella-800_medium.webp 1x, ./static/images/rosella-800_HD_medium.webp 2x">
+        <source media="(min-width: 200px)" srcset="./static/images/rosella_crop-400_small.webp 1x, ./static/images/rosella_crop-400_HD_small.webp 2x">
+        <img src="./static/images/rosella-1600_large.jpg" srcset="./static/images/rosella_crop-400_small.jpg 400w, ./static/images/rosella-800_medium.jpg 800w, ./static/images/rosella-1600_large.jpg 1600w" alt="A rosella picking up a piece of food on a forest floor.">
+      </picture>
+      
       <figcaption>Australian rosella</figcaption>
     </figure>
 
