--- a/lesson4_full_responsiveness/full_responsive_blog/blog/templates/index.html
+++ b/lesson4_full_responsiveness/full_responsive_blog/blog/templates/index.html
@@ -35,23 +35,25 @@
   <h1>My responsive blog</h1>
 
   <article>
-  
+  <figure>
     <!-- still life -->
     <picture>
       <source media="(min-width: 800px)" srcset="./static/images/still_life-1600_large.webp 1x, ./static/images/still_life-1600_HD_large.webp 2x">
-      <source media="(min-width: 500px)" srcset="./static/images/still_life-800_medium.webp 1x, ./static/images/still_life-800_HD_medium.webp 2x">
+      <!-- <source media="(min-width: 500px)" srcset="./static/images/still_life-800_medium.webp 1x, ./static/images/still_life-800_HD_medium.webp 2x"> -->
       <source media="(min-width: 200px)" srcset="./static/images/still_life-400_small.webp 1x, ./static/images/still_life-400_HD_small.webp 2x">
       <img src="./static/images/still_life-1600_large.jpg" srcset="./static/images/still_life-400_small.jpg 400w, ./static/images/still_life-800_medium.jpg 800w, ./static/images/still_life-1600_large.jpg 1600w" alt="a still life photo of a desk and some fruit">
     </picture>
-
+    <figcaption>
     <h2>My story</h2>
+    </figcaption>
+  </figure>
 
     <p>I love cheese, especially manchego swiss. ☺ Fromage queso jarlsberg cheesy feet emmental cottage cheese camembert de normandie bocconcini. Cottage cheese everyone loves cauliflower cheese rubber cheese squirty cheese halloumi cow fondue. Bocconcini cheese and biscuits everyone loves fondue red leicester st. agur blue cheese rubber cheese ricotta. Cheesy grin mozzarella.</p>
 
     <figure>
       <picture>
         <source media="(min-width: 800px)" srcset="./static/images/horses-1600_large.webp 1x, ./static/images/horses-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/horses_crop-800_medium.webp 1x, ./static/images/horses_crop_800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/horses_crop-800_medium.webp 1x, ./static/images/horses_crop_800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/horses_crop_s-400_small.webp 1x, ./static/images/horses_crop_s-400_HD_small.webp 2x">
         <img src="./static/images/horses-1600_large.jpg" srcset="./static/images/horses_crop_s-400_small.jpg 400w, ./static/images/horses_crop_s-800_medium.jpg 800w, ./static/images/horses-1600_large.jpg 1600w" alt="eight horses grazing in a field">
       </picture>
@@ -65,7 +67,7 @@
     <figure>
        <picture>
         <source media="(min-width: 800px)" srcset="./static/images/volt-1600_large.webp 1x, ./static/images/volt-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/volt-800_medium.webp 1x, ./static/images/volt-800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/volt-800_medium.webp 1x, ./static/images/volt-800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/volt-400_small.webp 1x, ./static/images/volt-400_HD_small.webp 2x">
         <img src="./static/images/volt-1600_large.jpg" srcset="./static/images/volt-400_small.jpg 400w, ./static/images/volt-800_medium.jpg 800w, ./static/images/volt-1600_large.jpg 1600w" alt="an old sign that says Volt">
       </picture>
@@ -78,7 +80,7 @@
     <figure>
        <picture>
         <source media="(min-width: 800px)" srcset="./static/images/cockatoos-1600_large.webp 1x, ./static/images/cockatoos-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/cockatoos-800_medium.webp 1x, ./static/images/cockatoos-800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/cockatoos-800_medium.webp 1x, ./static/images/cockatoos-800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/cockatoos-400_small.webp 1x, ./static/images/cockatoos-400_HD_small.webp 2x">
         <img src="./static/images/cockatoos-1600_large.jpg" srcset="./static/images/cockatoos-400_small.jpg 400w, ./static/images/cockatoos-800_medium.jpg 800w, ./static/images/postcard-1600_large.jpg 1600w" alt="two cockatoos chillin on a back porch railing with a mountainous backdrop">
       </picture>
@@ -96,7 +98,7 @@
     <figure>
       <picture>
         <source media="(min-width: 800px)" srcset="./static/images/postcard-1600_large.webp 1x, ./static/images/postcard-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/postcard-800_medium.webp 1x, ./static/images/postcard-800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/postcard-800_medium.webp 1x, ./static/images/postcard-800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/postcard-400_small.webp 1x, ./static/images/postcard-400_HD_small.webp 2x">
         <img src="./static/images/postcard-1600_large.jpg" srcset="./static/images/postcard-400_small.jpg 400w, ./static/images/postcard-800_medium.jpg 800w, ./static/images/postcard-1600_large.jpg 1600w" alt="French postcard from 25 November 1914">
       </picture>
@@ -109,7 +111,7 @@
     <figure>
        <picture>
         <source media="(min-width: 800px)" srcset="./static/images/grasshopper-1600_large.webp 1x, ./static/images/grasshopper-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/grasshopper-800_medium.webp 1x, ./static/images/grasshopper-800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/grasshopper-800_medium.webp 1x, ./static/images/grasshopper-800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/grasshopper-400_small.webp 1x, ./static/images/grasshopper-400_HD_small.webp 2x">
         <img src="./static/images/grasshopper-1600_large.jpg" srcset="./static/images/grasshopper-400_small.jpg 400w, ./static/images/grasshopper-800_medium.jpg 800w, ./static/images/grasshopper-1600_large.jpg 1600w" alt="A grasshopper on a man's brimmed hat">
       </picture>
@@ -122,7 +124,7 @@
     <figure>
        <picture>
         <source media="(min-width: 800px)" srcset="./static/images/sfo-1600_large.webp 1x, ./static/images/sfo-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/sfo-800_medium.webp 1x, ./static/images/sfo-800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/sfo-800_medium.webp 1x, ./static/images/sfo-800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/sfo-400_small.webp 1x, ./static/images/sfo-400_HD_small.webp 2x">
         <img src="./static/images/sfo-1600_large.jpg" srcset="./static/images/sfo-400_small.jpg 400w, ./static/images/sfo-800_medium.jpg 800w, ./static/images/sfo-1600_large.jpg 1600w" alt="An arial photo shot of San Francisco Airport from a plane">
       </picture>
@@ -134,7 +136,7 @@
     <figure>
        <picture>
         <source media="(min-width: 800px)" srcset="./static/images/rosella-1600_large.webp 1x, ./static/images/rosella-1600_HD_large.webp 2x">
-        <source media="(min-width: 500px)" srcset="./static/images/rosella-800_medium.webp 1x, ./static/images/rosella-800_HD_medium.webp 2x">
+        <!-- <source media="(min-width: 500px)" srcset="./static/images/rosella-800_medium.webp 1x, ./static/images/rosella-800_HD_medium.webp 2x"> -->
         <source media="(min-width: 200px)" srcset="./static/images/rosella_crop-400_small.webp 1x, ./static/images/rosella_crop-400_HD_small.webp 2x">
         <img src="./static/images/rosella-1600_large.jpg" srcset="./static/images/rosella_crop-400_small.jpg 400w, ./static/images/rosella-800_medium.jpg 800w, ./static/images/rosella-1600_large.jpg 1600w" alt="A rosella picking up a piece of food on a forest floor.">
       </picture>
